[package]
name = "webvr-test"
version = "0.0.0"
authors = ["finegeometer <finegeometer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlElement',
  'HtmlCanvasElement',
  'HtmlParagraphElement',
  'HtmlInputElement',
  'InputEvent',
  'MouseEvent',
  'Node',
  'KeyboardEvent',
  'WebGl2RenderingContext',
  'WebGlBuffer',
  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'WheelEvent',
  'Window',

  'VrDisplay',
  'VrLayer',
  'Navigator',
]
